<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">One For All</string>
    <string name="navigation_drawer_open" translatable="false" tools:ignore="ExtraTranslation">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="easyTic">One For All</string>
    <string name="home">Home</string>
    <string name="AdsSearch">Ads Search</string>
    <string name="AddProduct">Add Ads</string>
    <string name="MyFavorite">My Favorite</string>
    <string name="Setting">Setting</string>
    <string name="Communicate">Communicate</string>
    <string name="ContactUs">Contact Us</string>
    <string name="AboutApp">About App</string>
    <string name="LogOut">Log Out</string>
    <string name="notify">Notification</string>
    <string name="category">Categories</string>
    <string name="importantAds">Important Ads</string>
    <string name="brands">Brands</string>
    <string name="offers">Offers and discounts</string>

    <string name="search">Search</string>
    <string name="text_ham_button_text_normal">Ham </string>


    <string name="later">Later      >>></string>
    <string name="register">Register</string>
    <string name="registerFace">Continue with Facebook</string>
    <string name="registerGoogle">Continue with Google</string>
    <string name="login">LOGIN</string>
    <string name="signUp">SIGN UP</string>
    <string name="orUse"> OR USE YOUR EMAIL </string>

    <string name="fullName">Full Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="confirm_Password">Confirm Password</string>
    <string name="Phone">Phone</string>
    <string name="Enter_address">Location</string>
    <string name="shop_">Shop ?</string>
    <string name="request">request</string>
    <string name="signUp2">Sign Up</string>
    <string name="login3">Sign In ?</string>


    <string name="login2">Sign In</string>
    <string name="forgetpass">Forgot Password ?</string>
    <string name="signUp3">Sign Up ?</string>

    <string name="contactUs">Contact Us</string>
    <string name="message">Message</string>
    <string name="sendmessage">Send Message</string>
    <string name="helpText">you can contact us 24/7 customer services available at any time</string>

    <string name="uoloadProduct">Upload Product</string>
    <string name="productName">Ads Name</string>
    <string name="Product_case">Ads Case</string>
    <string name="Cost">Cost (L.E)</string>
    <string name="product2Name">Product Name</string>
    <string name="Product_descripe">Ads More descripe</string>
    <string name="Owner_Name">Owner Name</string>
    <string name="quantity">Quantity</string>
    <string name="I_agree_to">I agree to</string>
    <string name="the_publish_terms">the publish terms</string>
    <string name="Submit">Submit</string>

    <string name="myInfo">My Information</string>
    <string name="userInfo">User Information</string>
    <string name="ownerShop">I am Owner shop</string>
    <string name="products">User Ads</string>
<!--    <string name="myproducts">The Ads</string>-->
    <string name="Followers">Followers</string>
    <string name="Rate">Rate</string>
    <string name="More">More</string>
    <string name="Edit_Site">Edit Site</string>
    <string name="Notifies">Notifies</string>
    <string name="Addads">Add ads</string>
    <string name="report">report</string>
    <string name="Location">Location</string>
    <string name="Chat">Chat</string>
    <string name="Follow_me">Follow me</string>
    <string name="View_More">View More</string>

    <string name="AdsDetails">The Ads</string>
    <string name="DeleteAds">Delete Ads</string>
    <string name="Addphoto">Add photo</string>
    <string name="EditAds">Edit Ads</string>
    <string name="Like">Like</string>
    <string name="publishdate">Publish date :</string>

    <string name="next">NEXT</string>
    <string name="start">FINISH</string>
    <string name="welcome">Welcome in One For All</string>
    <string name="welcome2">One For All is online shopping guide app In addition to several other services for anyone</string>
    <string name="OoopsHowcanfind">Ooops How can find this Product ?</string>
    <string name="OoopsHowcanfind2">Don`t worry can her search about any product and know her location or cost and other details</string>
    <string name="Howknowthebest">How know the best ?</string>
    <string name="Howknowthebest2">With One For All can see lot of shops and compare between shops and products to choose the best for you</string>
    <string name="Myshopuknownunseen">My shop uknown unseen ?</string>
    <string name="Myshopuknownunseen2">Donn`t worry her can tell for all I`m her I have best products and best over or costs</string>

    <string name="facebook_app_id" translatable="false">264159988168626</string>
    <string name="fb_login_protocol_scheme">fb264159988168626</string>

    <string name="invalid_email">Email must be like this \"example@example.com\"</string>
    <string name="invalid_phone1">Phone number must be \ </string>
    <string name="invalid_phone2"> number</string>
    <string name="invalid_confirm_password">Confirm password not match</string>
    <string name="invalid_user_name">Username mast be more than 3 cher</string>
    <string name="invalid_delevery_price">Please select your delevery price</string>
    <string name="invalid_order_time">Please select your order time</string>
    <string name="invalid_least_range_of_order">Please select your least range of order price</string>
    <string name="invalid_password">Password mast be more than 6 of cher and number</string>
    <string name="error_inter_net">No internet connection, Please check your internet connection try again later</string>
    <string name="title_activity_maps">Map</string>
    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
    <string name="action_settings">action_settings</string>
    <string name="GPSAlertDialogMessage">GPSAlertDialogMessage</string>
    <string name="cancel">Cancel</string>
    <string name="more_setting">More Setting</string>
    <string name="Delete_Account">Delete Account</string>
    <string name="Add_costs_list">costs list</string>
    <string name="Edit_costs_list">Edit costs list</string>
    <string name="costs_list">Costs List</string>
    <string name="save_changes">Save</string>
    <string name="AddItem">Add Item</string>
    <string name="please_enter_item_data">Please Enter your Product Data</string>
    <string name="load_more">Load More</string>
    <string name="search_here">Select Search here</string>
    <string name="ignore_update">Ignore</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="the_categories">The Categories</string>
    <string name="the_sub_categories">Sub Categories</string>
    <string name="set_new_password">Set New Password</string>
    <string name="pin_code" >Pin Code</string>
    <string name="helpText2">Please Enter Pin Code from your Email and Set new Password here before send</string>
    <string name="send">Send</string>
    <string name="please_enter_your_email">Please Enter Your Email Here</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="default_notification_channel_id" >18</string>
    <string name="banner_ads_key" translatable="false">ca-app-pub-9907841302456691/7915184972</string>
    <string name="native_inside_ads_key" translatable="false">ca-app-pub-9907841302456691/5097449945</string>
    <string name="admob_id" translatable="false">ca-app-pub-9907841302456691~1134154205</string>
    <string name="samble_native_add" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="tab_text_1">مفقوداتى</string>
    <string name="tab_text_2">مشترواتى</string>
    <string name="tab_text_3">سوق الجملة</string>
    <string name="tab_text_4">الحجز والايجار</string>
    <string name="tab_text_5">مزاداتى</string>
    <string name="tab_text_6">الوظائف والخدمات</string>
    <string name="add_sale">Add Sale</string>
    <string name="brand">The Brand</string>
    <string name="model">The Model</string>
    <string name="transfer_type">Transfer Type</string>
    <string name="space">The Space (m2)</string>
    <string name="floors_num">Floors Number</string>
    <string name="the_floor">The Floor</string>
    <string name="rooms_num">Rooms Num</string>
    <string name="furnished_place">Furnished Place</string>
    <string name="ground_type">Ground Type</string>
    <string name="Cost_from">From :</string>
    <string name="Cost_to">To :</string>
    <string name="within_a_distance">Within A Distance</string>
    <string name="lost_thing">Lost Thing</string>
    <string name="back">Back</string>

    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
    </string-array>
</resources>
