<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:gravity="center"
        android:orientation="vertical"
        android:elevation="2dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:text="من فضلك ادخل بيانات المنتج"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:fontFamily="@font/janna"
            android:textSize="@dimen/_16ssp" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/costs_list_dialog_product_name_tily"
            style="@style/text_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/gradient_btn_shape"
            android:textColorHint="#99070707"
            >

            <EditText
                android:id="@+id/set_new_password_bin_code_etxt"
                style="@style/EditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product2Name"
                android:layout_marginBottom="@dimen/_4sdp"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/costs_list_dialog_product_cost_tily"
            style="@style/text_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/gradient_btn_shape"
            android:textColorHint="#99070707"
            >

            <EditText
                android:id="@+id/dh"
                style="@style/EditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Cost"
                android:layout_marginBottom="@dimen/_4sdp"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/costs_list_dialog_product_quality_tily"
            style="@style/text_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/gradient_btn_shape"
            android:textColorHint="#99070707"
            >

            <EditText
                android:id="@+id/set_new_password_bnbin_code_etxt"
                style="@style/EditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:layout_marginBottom="@dimen/_4sdp"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/costs_list_dialog_add_and_update_btn"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_29sdp"
            android:text="@string/save_changes"
            android:background="@drawable/searchlight2"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            />

    </LinearLayout>
</LinearLayout>
