<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_215sdp"
    app:behavior_hideable="true"
    android:orientation="vertical"
    app:behavior_peekHeight="@dimen/_200sdp"
    android:background="@drawable/botton_sheet_shape"
    app:cardElevation="@dimen/_60sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/bottomSheetHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/more_setting"
        android:textStyle="bold"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/lemon2"
        />
    <!--    android:textAppearance="@android:style/TextAppearance.Large"-->
    <View
        android:id="@+id/SplitLine_hor1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#070707"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:paddingBottom="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_23sdp"

            >

            <TextView
                android:id="@+id/delete_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:text="@string/Delete_Account"
                android:layout_weight="3"
                android:fontFamily="@font/lemon2"
                android:textSize="@dimen/_14ssp"
                android:textColor="#6F4A02"
                />

            />

            <ImageView
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_gravity="right|center"
                android:src="@drawable/ic_delete_blue_24dp"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_23sdp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:text="@string/Add_costs_list"
                android:layout_weight="3"
                android:fontFamily="@font/lemon2"
                android:textSize="@dimen/_14ssp"
                android:textColor="#6F4A02"

                />

            />

            <ImageView
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_gravity="right|center"

                android:src="@drawable/ic_playlist_add_black_24dp"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:text="@string/Edit_costs_list"
                android:fontFamily="@font/lemon2"
                android:textSize="@dimen/_14ssp"
                android:layout_weight="3"
                android:textColor="#6F4A02"

                />

            />

            <ImageView
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_gravity="end|center"
                android:src="@drawable/ic_mode_edit_black_24dp"
                android:layout_weight="1"

                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>