<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.Login.Login">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:paddingBottom="@dimen/_30sdp"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/_5sdp"
        android:background="#CC01B1FD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/constr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">


            <ImageView
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"

                android:background="@drawable/ic_arrow_w_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/search_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/lemon"
                android:text="@string/login2"
                android:textColor="#fff"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/list"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/linear2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/toolbar"
       />
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_145sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        >
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        app:cardBackgroundColor="#ECECEC"
        app:cardCornerRadius="10dp"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:padding="5dp"

            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#99070707"
               >

                <EditText
                    android:id="@+id/username"
                    style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_email_black_24dp"
                    android:hint="@string/Email"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/janna"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"

        app:cardBackgroundColor="#ECECEC"
        app:cardCornerRadius="10dp"
        >


        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColorHint="#99070707"


                >

                <EditText
                    android:id="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_https_black_24dp"
                    android:hint="@string/Password"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/janna"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    >
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:text="@string/forgetpass"
        android:textColor="#2F6EE4"
        android:textSize="15dp"
      />
</LinearLayout>
    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/searchlight"
        android:text="@string/login"
        android:textColor="#0057FF"
        android:fontFamily="@font/janna"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp"        />


        <TextView
            android:id="@+id/later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp3"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:textColor="#2F6EE4"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/ber"


            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>