<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/from_to_with_txt_lyout_change_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:text="@string/Cost"
        android:textSize="@dimen/_13ssp"
        android:textColor="@android:color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:cardBackgroundColor="#ECECEC"
            app:cardCornerRadius="10dp"
            android:layout_weight="1"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:background="@drawable/gradient_btn_shape"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_uplood_product_cost_from_tin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#99070707"
                    >

                    <EditText
                        android:id="@+id/fragment_uplood_product_cost_from_et"
                        style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_radio_button_unchecked_black_24dp"
                        android:hint="@string/Cost_from"
                        android:textSize="@dimen/_13ssp"
                        android:fontFamily="@font/janna"
                        android:inputType="number" />


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            app:cardBackgroundColor="#ECECEC"
            app:cardCornerRadius="10dp"
            android:layout_weight="1"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:background="@drawable/gradient_btn_shape"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_uplood_product_cost_to_tin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#99070707"
                    >

                    <EditText
                        android:id="@+id/fragment_uplood_product_cost_to_et"
                        style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_radio_button_unchecked_black_24dp"
                        android:hint="@string/Cost_to"
                        android:textSize="@dimen/_13ssp"
                        android:fontFamily="@font/janna"
                        android:inputType="number" />


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>